# llm-autonomy-bench

./: .env.example  .gitignore  README.md  candidate_selection.py  cluster_archetypes.py  config.py  export_results.py  filter_candidates.py  llm_screen.py  load_data.py  normalize.py  pyproject.toml  run_pipeline.py
.github/workflows/: deploy-pages.yml
Benchmark-Rubrics/: annotation-rubric-v0.3.md  realism-rubric-v0.3.md  scenario-templates-v0.3.md
Taxonomy/: autonomy_taxonomy_codebook_v01.md
docs/: README.md  app.js  firebase-config.example.js  firebase-config.js  firebase-rules.example  index.html  styles.css  wildchat_rae_v2_positive_review_cases.json
