[project]
name = "llm-autonomy-bench"
version = "0.1.0"
description = "Pipeline for curating autonomy-oriented decision conversations from WildChat and ShareGPT."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.18.0",
    "tqdm>=4.67.0",
]

[tool.uv]
package = false
